fix navbar on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -10621,3 +10621,9 @@ header.masthead h1 {
 .text-white-75 {
   color: rgba(255, 255, 255, 0.75);
 }
+
+@media (max-width: 576px) {
+  .navbar-brand {
+    width: 75%;
+  }
+}
